started converting the crossfilter example, got basic charts working for each dimension

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Crossfilter</title>
+<title>BJCP Crossfilter</title>
 <style>
 
 @import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700);
@@ -107,39 +107,39 @@ h1, h2 {
   width: 920px;
 }
 
-#flight-list {
+#style-list {
   min-height: 1024px;
 }
 
-#flight-list .date,
-#flight-list .day {
+#style-list .date,
+#style-list .day {
   margin-bottom: .4em;
 }
 
-#flight-list .flight {
+#style-list .style {
   line-height: 1.5em;
   background: #eee;
   width: 640px;
   margin-bottom: 1px;
 }
 
-#flight-list .time {
+#style-list .time {
   color: #999;
 }
 
-#flight-list .flight div {
+#style-list .style div {
   display: inline-block;
   width: 100px;
 }
 
-#flight-list div.distance,
-#flight-list div.delay {
+#style-list div.distance,
+#style-list div.delay {
   width: 160px;
   padding-right: 10px;
   text-align: right;
 }
 
-#flight-list .early {
+#style-list .early {
   color: green;
 }
 
@@ -154,122 +154,128 @@ aside {
 
 <div id="body">
 
-<a href="https://github.com/square"><img src="logotype.png" width="122" height="31"></a>
+<h1>BJCP Crossfilter</h1>
 
-<h1>Crossfilter</h1>
-
-<h2>Fast Multidimensional Filtering for Coordinated Views</h2>
-
-<p><b>Crossfilter</b> is a <a href="https://github.com/square/crossfilter">JavaScript library</a> for exploring large multivariate datasets in the browser. Crossfilter supports extremely fast (&lt;30ms) interaction with coordinated views, even with datasets containing a million or more records; we built it to power analytics for <a href="https://squareup.com/register">Square Register</a>, allowing merchants to slice and dice their payment history fluidly.
-
-<p>Since most interactions only involve a single dimension, and then only small adjustments are made to the filter values, incremental filtering and reducing is significantly faster than starting from scratch. Crossfilter uses sorted indexes (and a few bit-twiddling hacks) to make this possible, dramatically increasing the perfor&shy;mance of live histograms and top-<i>K</i> lists. For more details on how Crossfilter works, see the <a href="https://github.com/square/crossfilter/wiki/API-Reference">API reference</a>.
-
-<h2>Example: Airline on-time performance</h2>
-
-<p>The coordinated visualizations below (built with <a href="http://mbostock.github.com/d3/">D3</a>) show nearly a quarter-million flights from early 2001: part of the <a href="http://stat-computing.org/dataexpo/2009/">ASA Data Expo</a> dataset. The dataset is 5.3MB, so it might take a few seconds to download. Click and drag on any chart to filter by the associated dimension. The table beneath shows the eighty most recent flights that match the current filters; these are the <i>details on demand</i>, anecdotal evidence you can use to weigh different hypotheses.
-
-<p>Some questions to consider: How does time-of-day correlate with <a href="javascript:filter([null, [100, 150], null, null])">arrival delay</a>? Are <a href="javascript:filter([null, null, [1700, 2000], null])">longer</a> or <a href="javascript:filter([null, null, [0, 300], null])">shorter</a> flights more likely to arrive early? What happened on <a href="javascript:filter([null, [80, 150], null, [new Date(2001, 0, 12), new Date(2001, 0, 13)]])">January 12</a>? How do flight patterns differ between <a href="javascript:filter([null, null, null, [new Date(2001, 0, 27), new Date(2001, 0, 29)]])">weekends</a> and <a href="javascript:filter([null, null, null, [new Date(2001, 0, 29), new Date(2001, 1, 3)]])">weekdays</a>, or <a href="javascript:filter([[4, 7], null, null, null])">mornings</a> and <a href="javascript:filter([[21, 24], null, null, null])">nights</a>? <a href="https://github.com/square/crossfilter/tree/gh-pages">Fork this example</a> and try your own data!
+<h2>Fast Multidimensional Filtering for BJCP Styles</h2>
 
 <div id="charts">
-  <div id="hour-chart" class="chart">
-    <div class="title">Time of Day</div>
+  <div id="og-chart" class="chart">
+    <div class="title">Original Gravity</div>
   </div>
-  <div id="delay-chart" class="chart">
-    <div class="title">Arrival Delay (min.)</div>
+  <div id="fg-chart" class="chart">
+    <div class="title">Final Gravity</div>
   </div>
-  <div id="distance-chart" class="chart">
-    <div class="title">Distance (mi.)</div>
+  <div id="abv-chart" class="chart">
+    <div class="title">Alcohol by Volume</div>
   </div>
-  <div id="date-chart" class="chart">
-    <div class="title">Date</div>
+  <div id="ibu-chart" class="chart">
+    <div class="title">International Bitterness Units</div>
+  </div>
+  <div id="srm-chart" class="chart">
+    <div class="title">Color</div>
   </div>
 </div>
 
-<aside id="totals"><span id="active">-</span> of <span id="total">-</span> flights selected.</aside>
+<aside id="totals"><span id="active">-</span> of <span id="total">-</span> styles selected.</aside>
 
 <div id="lists">
-  <div id="flight-list" class="list"></div>
+  <div id="style-list" class="list"></div>
 </div>
 
 <footer>
   <span style="float:right;">
-    Released under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License 2.0</a>.
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.
   </span>
-  Copyright 2012 <a href="http://squareup.com">Square, Inc.</a>
+  Copyright 2012 <a href="https://github.com/mjaskula">Matthew Jaskula</a>
 </footer>
 
 </div>
 
-<a href="https://github.com/square/crossfilter"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+<a href="https://github.com/mjaskula/bjcpcrossfilter"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
 <script src="crossfilter.v1.min.js"></script>
 <script src="d3.v2.min.js"></script>
 <script>
 
-// (It's CSV, but GitHub Pages only gzip's JSON at the moment.)
-d3.csv("flights-3m.json", function(flights) {
-
+d3.json("bjcp.json", function(categoryHolder) {
+  
   // Various formatters.
   var formatNumber = d3.format(",d"),
       formatChange = d3.format("+,d"),
       formatDate = d3.time.format("%B %d, %Y"),
-      formatTime = d3.time.format("%I:%M %p");
+      formatTime = d3.time.format("%I:%M %p"); // TODO: unnecessary formatters
 
-  // A nest operator, for grouping the flight list.
+  // A nest operator, for grouping the style list.
   var nestByDate = d3.nest()
       .key(function(d) { return d3.time.day(d.date); });
 
+  var styles = new Array();
+
+  categoryHolder.categories.forEach(function(category) {
+    category.subcategories.forEach(function(style) {
+      style.category = category.name;
+      styles.push(style);
+    });
+  });
+
   // A little coercion, since the CSV is untyped.
-  flights.forEach(function(d, i) {
+  styles.forEach(function(d, i) {
     d.index = i;
-    d.date = parseDate(d.date);
-    d.delay = +d.delay;
-    d.distance = +d.distance;
+    // TODO: might need this for Numbers
+    // d.delay = +d.delay;
   });
 
   // Create the crossfilter for the relevant dimensions and groups.
-  var flight = crossfilter(flights),
-      all = flight.groupAll(),
-      date = flight.dimension(function(d) { return d3.time.day(d.date); }),
-      dates = date.group(),
-      hour = flight.dimension(function(d) { return d.date.getHours() + d.date.getMinutes() / 60; }),
-      hours = hour.group(Math.floor),
-      delay = flight.dimension(function(d) { return Math.max(-60, Math.min(149, d.delay)); }),
-      delays = delay.group(function(d) { return Math.floor(d / 10) * 10; }),
-      distance = flight.dimension(function(d) { return Math.min(1999, d.distance); }),
-      distances = distance.group(function(d) { return Math.floor(d / 50) * 50; });
+  var style = crossfilter(styles),
+      all = style.groupAll(),
+      og = style.dimension(function(d) { return d.og_low; }),
+      ogs = og.group(),
+      fg = style.dimension(function(d) { return d.fg_low; }),
+      fgs = fg.group(),
+      abv = style.dimension(function(d) { return d.abv_low; }),
+      abvs = abv.group(),
+      ibu = style.dimension(function(d) { return d.ibu_low; }),
+      ibus = ibu.group(),
+      srm = style.dimension(function(d) { return d.srm_low; }),
+      srms = srm.group();
 
   var charts = [
 
     barChart()
-        .dimension(hour)
-        .group(hours)
+        .dimension(og)
+        .group(ogs)
       .x(d3.scale.linear()
-        .domain([0, 24])
-        .rangeRound([0, 10 * 24])),
+        .domain([0.95, 1.2])
+        .rangeRound([0, 800])),
 
     barChart()
-        .dimension(delay)
-        .group(delays)
+        .dimension(fg)
+        .group(fgs)
       .x(d3.scale.linear()
-        .domain([-60, 150])
-        .rangeRound([0, 10 * 21])),
+        .domain([0.95, 1.2])
+        .rangeRound([0, 800])),
 
     barChart()
-        .dimension(distance)
-        .group(distances)
+        .dimension(abv)
+        .group(abvs)
       .x(d3.scale.linear()
-        .domain([0, 2000])
-        .rangeRound([0, 10 * 40])),
+        .domain([0, 15])
+        .rangeRound([0, 800])),
 
     barChart()
-        .dimension(date)
-        .group(dates)
-        .round(d3.time.day.round)
-      .x(d3.time.scale()
-        .domain([new Date(2001, 0, 1), new Date(2001, 3, 1)])
-        .rangeRound([0, 10 * 90]))
-        .filter([new Date(2001, 1, 1), new Date(2001, 2, 1)])
+        .dimension(ibu)
+        .group(ibus)
+      .x(d3.scale.linear()
+        .domain([0, 100])
+        .rangeRound([0, 1000])),
+
+    barChart()
+        .dimension(srm)
+        .group(srms)
+      .x(d3.scale.linear()
+        .domain([0, 70])
+        .rangeRound([0, 700])),
+
 
   ];
 
@@ -282,11 +288,11 @@ d3.csv("flights-3m.json", function(flights) {
 
   // Render the initial lists.
   var list = d3.selectAll(".list")
-      .data([flightList]);
+      .data([styleList]);
 
   // Render the total.
   d3.selectAll("#total")
-      .text(formatNumber(flight.size()));
+      .text(formatNumber(style.size()));
 
   renderAll();
 
@@ -302,15 +308,6 @@ d3.csv("flights-3m.json", function(flights) {
     d3.select("#active").text(formatNumber(all.value()));
   }
 
-  // Like d3.time.format, but faster.
-  function parseDate(d) {
-    return new Date(2001,
-        d.substring(0, 2) - 1,
-        d.substring(2, 4),
-        d.substring(4, 6),
-        d.substring(6, 8));
-  }
-
   window.filter = function(filters) {
     filters.forEach(function(d, i) { charts[i].filter(d); });
     renderAll();
@@ -321,12 +318,12 @@ d3.csv("flights-3m.json", function(flights) {
     renderAll();
   };
 
-  function flightList(div) {
-    var flightsByDate = nestByDate.entries(date.top(40));
+  function styleList(div) {
+    var stylesByDate = nestByDate.entries(date.top(40));
 
     div.each(function() {
       var date = d3.select(this).selectAll(".date")
-          .data(flightsByDate, function(d) { return d.key; });
+          .data(stylesByDate, function(d) { return d.key; });
 
       date.enter().append("div")
           .attr("class", "date")
@@ -336,36 +333,36 @@ d3.csv("flights-3m.json", function(flights) {
 
       date.exit().remove();
 
-      var flight = date.order().selectAll(".flight")
+      var style = date.order().selectAll(".style")
           .data(function(d) { return d.values; }, function(d) { return d.index; });
 
-      var flightEnter = flight.enter().append("div")
-          .attr("class", "flight");
+      var styleEnter = style.enter().append("div")
+          .attr("class", "style");
 
-      flightEnter.append("div")
+      styleEnter.append("div")
           .attr("class", "time")
           .text(function(d) { return formatTime(d.date); });
 
-      flightEnter.append("div")
+      styleEnter.append("div")
           .attr("class", "origin")
           .text(function(d) { return d.origin; });
 
-      flightEnter.append("div")
+      styleEnter.append("div")
           .attr("class", "destination")
           .text(function(d) { return d.destination; });
 
-      flightEnter.append("div")
+      styleEnter.append("div")
           .attr("class", "distance")
           .text(function(d) { return formatNumber(d.distance) + " mi."; });
 
-      flightEnter.append("div")
+      styleEnter.append("div")
           .attr("class", "delay")
           .classed("early", function(d) { return d.delay < 0; })
           .text(function(d) { return formatChange(d.delay) + " min."; });
 
-      flight.exit().remove();
+      style.exit().remove();
 
-      flight.order();
+      style.order();
     });
   }
 
