--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ aside {
 
 <a href="https://github.com/mjaskula/bjcpcrossfilter"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
-<script src="crossfilter.v1.min.js"></script>
+<script src="crossfilter.v1.js"></script>
 <script src="d3.v2.min.js"></script>
 <script>
 
@@ -259,17 +259,20 @@ d3.json("bjcp.json", function(categoryHolder) {
       styleDefs[style.id] = style;
 
       forEveryValue(+style.og_low, +style.og_high, 0.001, function(og) {
-        console.log(og + " \n");
-        // TODO: remove unused data from this obj to save memory
-        styles.push({category: category.name,
-                     catId: style.catId,
-                     subCatId: style.subCatId,
-                     name: style.name,
-                     og: og,
-                     fg: style.fg_low,
-                     srm: style.srm_low,
-                     ibu: style.ibu_low,
-                     abv: style.abv_low});
+        forEveryValue(+style.fg_low, +style.fg_high, 0.001, function(fg) {
+          forEveryValue(+style.abv_low, +style.abv_high, 0.1, function(abv) {
+            // TODO: remove unused data from this obj to save memory
+            styles.push({category: category.name,
+                         catId: style.catId,
+                         subCatId: style.subCatId,
+                         name: style.name,
+                         og: og,
+                         fg: fg,
+                         srm: style.srm_low,
+                         ibu: style.ibu_low,
+                         abv: abv});
+          });
+        });
       });
     });
   });
@@ -375,7 +378,7 @@ d3.json("bjcp.json", function(categoryHolder) {
   };
 
   function styleList(div) {
-    var stylesById = nestById.entries(cat.top(3000)); //All of em
+    var stylesById = nestById.entries(cat.top(Infinity)); //All of em
 
     div.each(function() {
       var style = d3.select(this).selectAll(".style")
