--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ aside {
 
 <footer>
   <span style="float:right;">
-    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.
+    Released under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License 2.0</a>.
   </span>
   Copyright 2012 <a href="https://github.com/mjaskula">Matthew Jaskula</a>
 </footer>
