--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ aside {
   position: absolute;
   left: 740px;
   font-size: smaller;
-  width: 220px;
+  width: 230px;
 }
 
 </style>
@@ -225,7 +225,8 @@ aside {
 
 var GRAVITY_LOW  = 0.995;
 var GRAVITY_HIGH = 1.15;
-
+var IBU_VALUES = [3, 8, 10, 12, 15, 16, 17, 18, 20, 22, 23, 25, 26, 27, 28, 30, 32, 35, 40, 45, 50, 60, 70, 75, 90, 120];
+var SRM_VALUES = [2, 3, 3.5, 4, 4.5, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 22, 23, 25, 28, 30, 35, 40];
 
 d3.json("bjcp.json", function(categoryHolder) {
   
@@ -250,6 +251,16 @@ d3.json("bjcp.json", function(categoryHolder) {
     }
   }
 
+  function forValuesIn(low, high, values, f) {
+    if (low && high) {
+      values.forEach(function(v) {
+        if (v >= low && v <= high) {
+          f(v);
+        }
+      });
+    }
+  }
+
   categoryHolder.categories.forEach(function(category) {
     category.subcategories.forEach(function(style) {
       style.category = category.name;
@@ -257,20 +268,25 @@ d3.json("bjcp.json", function(categoryHolder) {
       style.catId = +id.substring(0, id.length - 1);
       style.subCatId = id.substring(id.length - 1);
       styleDefs[style.id] = style;
+      if (!style.ibu_low ) { style.ibu_low  = 0;}
+      if (!style.ibu_high) { style.ibu_high = 0;}
 
-      forEveryValue(+style.og_low, +style.og_high, 0.001, function(og) {
-        forEveryValue(+style.fg_low, +style.fg_high, 0.001, function(fg) {
-          forEveryValue(+style.abv_low, +style.abv_high, 0.1, function(abv) {
-            // TODO: remove unused data from this obj to save memory
-            styles.push({category: category.name,
-                         catId: style.catId,
-                         subCatId: style.subCatId,
-                         name: style.name,
-                         og: og,
-                         fg: fg,
-                         srm: style.srm_low,
-                         ibu: style.ibu_low,
-                         abv: abv});
+      forEveryValue(+style.og_low, +style.og_high, 0.002, function(og) {
+        forEveryValue(+style.fg_low, +style.fg_high, 0.002, function(fg) {
+          forEveryValue(+style.abv_low, +style.abv_high, 0.2, function(abv) {
+            forValuesIn(+style.ibu_low, +style.ibu_high, IBU_VALUES, function(ibu) {
+              forValuesIn(+style.srm_low, +style.srm_high, SRM_VALUES, function(srm) {
+                // TODO: remove unused data from this obj to save memory
+                styles.push({category: category.name,
+                             catId: style.catId,
+                             subCatId: style.subCatId,
+                             og: og,
+                             fg: fg,
+                             srm: srm,
+                             ibu: ibu,
+                             abv: abv});
+              });
+            });
           });
         });
       });
