--- a/index2.html
+++ b/index2.html
@@ -117,6 +117,184 @@ h1, h2 {
 
 .data-table {}
 
+/*dc.css*/
+
+.dc-chart {
+    float: left;
+}
+
+.dc-chart rect.bar {
+    stroke: none;
+    fill: steelblue;
+}
+
+.dc-chart rect.bar:hover {
+    fill-opacity: .5;
+}
+
+.dc-chart rect.deselected {
+    stroke: none;
+    fill: #ccc;
+}
+
+.dc-chart .sub .bar {
+    stroke: none;
+    fill: #ccc;
+}
+
+.dc-chart .selected path{
+    stroke-width: 3;
+    stroke: #ccc;
+    fill-opacity: 1;
+}
+
+.dc-chart .deselected path{
+    strok: none;
+    fill-opacity: .5;
+    fill: #ccc;
+}
+
+.dc-chart .axis path, .axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+}
+
+.dc-chart .axis text {
+    font: 10px sans-serif;
+}
+
+.dc-chart .grid-line line {
+    fill: none;
+    stroke: #ccc;
+    opacity: .5;
+    shape-rendering: crispEdges;
+}
+
+.dc-chart .brush rect.background {
+    z-index: -999;
+}
+
+.dc-chart .brush rect.extent {
+    fill: steelblue;
+    fill-opacity: .125;
+}
+
+.dc-chart .brush .resize path {
+    fill: #eee;
+    stroke: #666;
+}
+
+.dc-chart path.line {
+    fill: none;
+    stroke: steelblue;
+    stroke-width: 1.5px;
+}
+
+.dc-chart circle.dot{
+    fill: steelblue;
+}
+
+.dc-chart g.dc-tooltip path{
+    fill: none;
+    stroke: grey;
+    stroke-opacity: .8;
+}
+
+.dc-chart path.area {
+    fill: steelblue;
+    fill-opacity: .3;
+    stroke: none;
+}
+
+.dc-chart g.stack1 path.area {
+    fill: green;
+}
+
+.dc-chart g.stack2 path.area {
+    fill: red;
+}
+
+.dc-chart .node {
+    font-size: 0.7em;
+    cursor: pointer;
+}
+
+.dc-chart .node :hover{
+    fill-opacity: .8;
+}
+
+.dc-chart .selected circle {
+    stroke-width: 3;
+    stroke: #ccc;
+    fill-opacity: 1;
+}
+
+.dc-chart .deselected circle {
+    strok: none;
+    fill-opacity: .5;
+    fill: #ccc;
+}
+
+.dc-chart .bubble {
+    stroke: none;
+    fill-opacity: 0.6;
+}
+
+.dc-data-count {
+    float: right;
+    margin-top: 15px;
+    margin-right: 15px;
+}
+
+.dc-data-count .filter-count {
+    color: #3182bd;
+    font-weight: bold;
+}
+
+.dc-data-count .total-count {
+    color: #3182bd;
+    font-weight: bold;
+}
+
+.dc-data-table {}
+
+.dc-chart g.state{
+    cursor: pointer;
+}
+
+.dc-chart g.state :hover{
+    fill-opacity: .8;
+}
+
+.dc-chart g.state path {
+    stroke: white;
+}
+
+.dc-chart g.selected path {
+}
+
+.dc-chart g.deselected path {
+    fill: grey;
+}
+
+.dc-chart g.selected text {
+}
+
+.dc-chart g.deselected text {
+    display: none;
+}
+
+.dc-chart g.county path {
+    stroke: white;
+    fill: none;
+}
+
+.dc-chart g.debug rect{
+    fill: blue;
+    fill-opacity: .2;
+}
+/*end dc.css*/
 
 </style>
 
@@ -124,40 +302,47 @@ h1, h2 {
 
 <h1>Beer Crossfilter</h1>
 
+<br/>
+
 <div id="charts">
-  <div id="og-chart" class="chart">
+  <div id="og-chart" class="dc-chart">
     <div class="title">Original Gravity</div>
     <a class="reset" href="javascript:ogChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
     <span class="reset" style="display: none;">Current filter: <span class="filter"></span></span>
   </div>
-  <div id="abv-chart" class="chart">
+  <br/>
+  <div id="abv-chart" class="dc-chart">
     <div class="title">Alcohol by Volume</div>
     <a class="reset" href="javascript:abvChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
     <span class="reset" style="display: none;">Current filter: <span class="filter"></span></span>
   </div>
-  <div id="ibu-chart" class="chart">
+  <br/>
+  <div id="ibu-chart" class="dc-chart">
     <div class="title">International Bitterness Units</div>
     <a class="reset" href="javascript:ibuChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
     <span class="reset" style="display: none;">Current filter: <span class="filter"></span></span>
   </div>
-  <div id="srm-chart" class="chart">
+  <br/>
+  <div id="srm-chart" class="dc-chart">
     <div class="title">SRM</div>
     <a class="reset" href="javascript:srmChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
     <span class="reset" style="display: none;">Current filter: <span class="filter"></span></span>
   </div>
-  <div id="style-chart" class="chart">
+  <br/>
+  <div id="style-chart" class="dc-chart">
     <div class="title">Style</div>
     <a class="reset" href="javascript:styleChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
     <span class="reset" style="display: none;">Current filter: <span class="filter"></span></span>
   </div>
 </div>
-
+<br/>
 <div class="row">
     <div >
         <div class="data-count">
             <span class="filter-count"></span> selected out of <span class="total-count"></span> records | <a href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>
         </div>
     </div>
+    <br/>
     <table class="table table-hover data-table">
         <thead>
         <tr class="header">
@@ -182,11 +367,18 @@ h1, h2 {
 <script  type="text/javascript">
 
 var ogChart  = dc.barChart("#og-chart");
-// var abvChart = dc.barChart("#abv-chart");
+var abvChart = dc.barChart("#abv-chart");
 // var ibuChart = dc.barChart("#ibu-chart");
 // var srmChart = dc.barChart("#srm-chart");
 
 d3.json("beers.json", function(data) {
+
+	data.forEach(function(b) { 
+		b.og = parseFloat(b.og).toPrecision(4);
+		if (b.og > 2) {
+			b.og = 1.050 // TODO: convert from plato?
+		}
+	});
 
 	// feed it through crossfilter
 	var beercrossfilter = crossfilter(data);
@@ -208,41 +400,35 @@ d3.json("beers.json", function(data) {
 	var srmGroup     = srmDimension.group();
 	var styleIdGroup = styleIdDimension.group();
 
+  ogChart
+    .dimension(ogDimension)
+    .group(ogGroup)
+    .width(1000)
+    .height(250)
+    .margins({top: 10, right: 50, bottom: 30, left: 40})
+    .transitionDuration(250)
+    .gap(1)
+    .x(d3.scale.linear().domain([0.995, 1.15]))
+    .xUnits(dc.units.float.precision(0.001))
+    .renderHorizontalGridLines(true)
+    .renderVerticalGridLines(true);
 
-	ogChart
-		.width(990) // (optional) define chart width, :default = 200
-	    .height(250) // (optional) define chart height, :default = 200
-	    .transitionDuration(500) // (optional) define chart transition duration, :default = 500
-	    // (optional) define margins
-	    .margins({top: 10, right: 50, bottom: 30, left: 40})
-	    .dimension(ogDimension)
-	    .group(ogGroup)
-	    // (optional) whether chart should rescale y axis to fit data, :default = false
-	    .elasticY(true)
-	    // (optional) when elasticY is on whether padding should be applied to y axis domain, :default=0
-	    .yAxisPadding(100)
-	    // (optional) whether chart should rescale x axis to fit data, :default = false
-	    // .elasticX(true)
-	    // (optional) when elasticX is on whether padding should be applied to x axis domain, :default=0
-	    // .xAxisPadding(500)
-	    // define x scale
-	    // .x(d3.time.scale().domain([new Date(1985, 0, 1), new Date(2012, 11, 31)]))
-	    .x(d3.scale.linear().domain([0.995, 1.15]).rangeRound([0, 800]))
-	    // (optional) set filter brush rounding
-	    // .round(d3.time.month.round)
-	    // define x axis units
-	    // .xUnits(d3.time.months)
-	    // (optional) whether bar should be center to its x value, :default=false
-	    .centerBar(true)
-	    // (optional) render horizontal grid lines, :default=false
-	    .renderHorizontalGridLines(true)
-	    // (optional) render vertical grid lines, :default=false
-	    .renderVerticalGridLines(true)
-	    // (optional) whether svg title element(tooltip) should be generated for each bar using
-	    // the given function, :default=no
-	    .title(function(d) { return "Value: " + d.value; })
-	    // (optional) whether chart should render titles, :default = false
-	    .renderTitle(true);
+  abvChart
+    .dimension(abvDimension)
+    .group(abvGroup)
+    .width(1000)
+    .height(250)
+    .margins({top: 10, right: 50, bottom: 30, left: 40})
+    .transitionDuration(250)
+    .gap(1)
+    .x(d3.scale.linear().domain([0, 12]))
+    .xUnits(dc.units.float.precision(0.1))
+    .renderHorizontalGridLines(true)
+    .renderVerticalGridLines(true)
+    .xAxis()
+    .tickFormat(function(v) {
+        return v + "%";
+    });
 
 	dc.dataCount(".data-count")
 	    .dimension(beercrossfilter) // set dimension to all data
@@ -270,7 +456,6 @@ d3.json("beers.json", function(data) {
 	    .sortBy(function(d){ return d.style; })
 	    // (optional) sort order, :default ascending
 	    .order(d3.ascending);
-
 
     // simply call renderAll() to render all charts on the page
 	dc.renderAll();
