moved js libs to the js dir

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
     <meta charset="UTF-8">
 
-	<script type="text/javascript" src="crossfilter.v1.min.js"></script>
-	<script type="text/javascript" src="d3.v2.min.js"></script>
-	<script type="text/javascript" src="dc.min.js"></script>
+	<script type="text/javascript" src="js/crossfilter.v1.min.js"></script>
+	<script type="text/javascript" src="js/d3.v2.min.js"></script>
+	<script type="text/javascript" src="js/dc.min.js"></script>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
